--- a/index.html
+++ b/index.html
@@ -109,19 +109,19 @@
     <!-- Core theme JS -->
     <!-- SB Forms JS (CTA 폼용) -->
     <!-- <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script> -->
-     <script> '''나상웅'''
+     <script> 
       document.querySelectorAll("#card1").forEach(el => {
         el.addEventListener("click", ()=>{location.href="https://script.google.com/a/macros/saerom.hs.kr/s/AKfycbxXkxJCgNcFNJJCi5yXZ8GabAvltL8OA_2LQGmCX3sgYrAwnVloIWr-Gi07cLo_nbRPjg/exec"})
       });
      </script>
 
-      <script> '''이기태'''
+      <script> 
       document.querySelectorAll("#card2").forEach(el => {
         el.addEventListener("click", ()=>{location.href="https://forms.gle/YT5gfsD77Q5tHBjg6"})
       });
      </script>
 
-       <script> '''조영호'''
+       <script> 
       document.querySelectorAll("#card3").forEach(el => {
         el.addEventListener("click", ()=>{location.href="https://board-f356a.web.app/"})
       });
