--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
       <script> 
       document.querySelectorAll("#card2").forEach(el => {
-        el.addEventListener("click", ()=>{location.href="https://forms.gle/YT5gfsD77Q5tHBjg6"})
+        el.addEventListener("click", ()=>{location.href="https://script.google.com/macros/s/AKfycby2dFLvKQmhxH0cEzJQGz-wtWWL2pcdhli9lQuk0z20SJOi5HXw0NhorW2LKutGp_e9MA/exec"})
       });
      </script>
 
