--- a/index.html
+++ b/index.html
@@ -128,6 +128,12 @@
         el.addEventListener("click", ()=>{location.href="https://board-f356a.web.app/"})
       });
      </script>
+
+    <script> 
+      document.querySelectorAll(".glmoon").forEach(el => {
+        el.addEventListener("click", ()=>{location.href="https://forms.gle/roihvwBoigQXNWF2A"})
+      });
+     </script>
   </body>
 </html>
 
