--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
        <script> 
       document.querySelectorAll("#card3").forEach(el => {
-        el.addEventListener("click", ()=>{location.href="https://board-f356a.web.app/"})
+        el.addEventListener("click", ()=>{location.href="https://notify-d21e5.web.app/"})
       });
      </script>
 
