--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
       <script> 
       document.querySelectorAll("#card2").forEach(el => {
-        el.addEventListener("click", ()=>{location.href="https://script.google.com/macros/s/AKfycby2dFLvKQmhxH0cEzJQGz-wtWWL2pcdhli9lQuk0z20SJOi5HXw0NhorW2LKutGp_e9MA/exec"})
+        el.addEventListener("click", ()=>{location.href="notify-d21e5.firebaseapp.com"})
       });
      </script>
 
