--- a/index.html
+++ b/index.html
@@ -113,19 +113,19 @@
     <!-- <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script> -->
      <script> 
       document.querySelectorAll("#card1").forEach(el => {
-        el.addEventListener("click", ()=>{location.href="https://script.google.com/a/macros/saerom.hs.kr/s/AKfycbxXkxJCgNcFNJJCi5yXZ8GabAvltL8OA_2LQGmCX3sgYrAwnVloIWr-Gi07cLo_nbRPjg/exec"})
+        el.addEventListener("click", ()=>{location.href="notify-d21e5.firebaseapp.com"})
       });
      </script>
 
       <script> 
       document.querySelectorAll("#card2").forEach(el => {
-        el.addEventListener("click", ()=>{location.href="notify-d21e5.firebaseapp.com"})
+        el.addEventListener("click", ()=>{location.href="https://docs.google.com/spreadsheets/d/1o6p7D2jPOvvICqp8l8I-ZJQ8L4nduvhTSMMLKO4WJnE/edit?gid=1113029508#gid=1113029508"})
       });
      </script>
 
        <script> 
       document.querySelectorAll("#card3").forEach(el => {
-        el.addEventListener("click", ()=>{location.href="https://notify-d21e5.web.app/"})
+        el.addEventListener("click", ()=>{location.href="https://board-f356a.web.app/"})
       });
      </script>
 
