--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
       <script> 
       document.querySelectorAll("#card2").forEach(el => {
-        el.addEventListener("click", ()=>{location.href="https://docs.google.com/spreadsheets/d/1o6p7D2jPOvvICqp8l8I-ZJQ8L4nduvhTSMMLKO4WJnE/edit?gid=1113029508#gid=1113029508"})
+        el.addEventListener("click", ()=>{location.href="https://script.google.com/macros/s/AKfycby2dFLvKQmhxH0cEzJQGz-wtWWL2pcdhli9lQuk0z20SJOi5HXw0NhorW2LKutGp_e9MA/exec"})
       });
      </script>
 
