--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <!-- <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script> -->
      <script> 
       document.querySelectorAll("#card1").forEach(el => {
-        el.addEventListener("click", ()=>{location.href="https://notify-d21e5.firebaseapp.com"})
+        el.addEventListener("click", ()=>{location.href="https://notify-d21e5.web.app"})
       });
      </script>
 
