--- a/index.html
+++ b/index.html
@@ -123,11 +123,11 @@
       });
      </script>
 
-       <script> 
+       <script> ###
       document.querySelectorAll("#card3").forEach(el => {
         el.addEventListener("click", ()=>{location.href="https://board-f356a.web.app/"})
       });
-     </script>
+     </script>###
 
     <script> 
       document.querySelectorAll(".glmoon").forEach(el => {
