--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
      </script>
 
       <script> 
-      ###document.querySelectorAll("#card2").forEach(el => {
-        el.addEventListener("click", ()=>{location.href="https://script.google.com/macros/u/2/s/AKfycby2dFLvKQmhxH0cEzJQGz-wtWWL2pcdhli9lQuk0z20SJOi5HXw0NhorW2LKutGp_e9MA/exec"})
-      });###
+      document.querySelectorAll("#card2").forEach(el => {
+        el.addEventListener("click", ()=>{location.href="https://taupe-six-15.vercel.app/"})
+      });
      </script>
 
        <script>
